--- a/index.html
+++ b/index.html
@@ -3,8 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Intro to Web Dev</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to my landing page!</h1>
+    <p>My name is Seth Kerrey.</p>
+    <p>I live in Omaha, NE.</p>
+    <div class="underline">I am studying web development.</div>
+    <div class="italic">I enjoy making beautiful websites.</div>
+    <br>
+
+    <div>My favorite colors are:</div>
+    <ul>
+        <li class="blue">Blue</li>
+        <li class="teal">Teal</li>
+        <li class="green">Green</li>
+        <li class="silver">Silver</li>
+        <li class="aquamarine">Aquamarine</li>
+    </ul>
+
+    <div>My favorite animals are:</div>
+    <ol>
+        <li>Bears</li>
+        <li>Squirrels</li>
+        <li>Cats</li>
+        <li>Dogs</li>
+        <li>Snakes</li>
+    </ol>
+
+    <table>
+        <tr>
+            <th>Colors List</th>
+            <th>Animal List</th>
+        </tr>
+        <tr>
+            <td>Blue</td>
+            <td>Bears</td>
+        </tr>
+        <tr>
+            <td>Teal</td>
+            <td>Squirrels</td>
+        </tr>
+        <tr>
+            <td>Green</td>
+            <td>Cats</td>
+        </tr>
+        <tr>
+            <td>Silver</td>
+            <td>Dogs</td>
+        </tr>
+        <tr>
+            <td>Aquamarine</td>
+            <td>Snakes</td>
+        </tr>
+    </table>
+    <br><br>
+    <div id="last-div">This website stuff is easy!</div>
 </body>
 </html>
